CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Start defining the project
PROJECT (WOUNDVAC_TRACKER)

# Set version numbers
SET(WOUNDVAC_TRACKER_MAJOR_VERSION 1)
SET(WOUNDVAC_TRACKER_MINOR_VERSION 0)
SET(WOUNDVAC_TRACKER_VERSION "${WOUNDVAC_TRACKER_MAJOR_VERSION}.${WOUNDVAC_TRACKER_MINOR_VERSION}")

# Set cmake module path
SET(CMAKE_MODULE_PATH "${WOUNDVAC_TRACKER_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

IF(NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
MAKE_DIRECTORY(${OUTPUT_BINDIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})


SET(WOUNDVAC_TRACKER_SRC
    wvtracker.cpp
    )

FIND_PACKAGE(jsoncpp)
FIND_PACKAGE(ARToolkit)

INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ARTOOLKIT_INCLUDE_DIR})

ADD_EXECUTABLE(woundvac_tracker ${WOUNDVAC_TRACKER_SRC})

TARGET_LINK_LIBRARIES(woundvac_tracker ${JSONCPP_LIBRARY})
TARGET_LINK_LIBRARIES(woundvac_tracker ${ARTOOLKIT_LIBRARIES})
TARGET_LINK_LIBRARIES(woundvac_tracker pthread)
TARGET_LINK_LIBRARIES(woundvac_tracker GL)
TARGET_LINK_LIBRARIES(woundvac_tracker GLU)
TARGET_LINK_LIBRARIES(woundvac_tracker glut)

INSTALL(TARGETS woundvac_tracker DESTINATION bin)
